--- a/assn-2-six-degrees/Makefile
+++ b/assn-2-six-degrees/Makefile
@@ -2,7 +2,8 @@
 ## Makefile for CS107 Assignment 2: Six Degrees
 ##
 
-CPPFLAGS = -g -Wall
+#CPPFLAGS = -g -Wall
+CPPFLAGS = -ggdb -Wall -fpermissive
 CXX = g++
 LDFLAGS =
 
